# ChangeLog for dev-perl/Net-SSLeay
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.57 2009/05/02 11:03:07 tove Exp $

  02 May 2009; Torsten Veller <tove@gentoo.org> -Net-SSLeay-1.25.ebuild,
  -Net-SSLeay-1.30.ebuild:
  Cleanup

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> Net-SSLeay-1.35.ebuild:
  Stable for HPPA (bug #261508).

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> Net-SSLeay-1.35.ebuild:
  Marked ppc stable for bug #261508.

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> Net-SSLeay-1.35.ebuild:
  m68k stable wrt #261508, thanks to kolla for testing

  15 Mar 2009; Brent Baude <ranger@gentoo.org> Net-SSLeay-1.35.ebuild:
  stable ppc64, bug 261508

  08 Mar 2009; Benedikt Böhm <hollow@gentoo.org> Net-SSLeay-1.35.ebuild:
  stable on amd64 wrt #261508

  07 Mar 2009; Raúl Porcel <armin76@gentoo.org> Net-SSLeay-1.35.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #261508

*Net-SSLeay-1.35 (28 Jul 2008)

  28 Jul 2008; Torsten Veller <tove@gentoo.org> +Net-SSLeay-1.35.ebuild:
  Version bump (#228047)

  27 Mar 2008; Raúl Porcel <armin76@gentoo.org> Net-SSLeay-1.30.ebuild:
  Add ~sparc-fbsd wrt #215094

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Net-SSLeay-1.30.ebuild:
  Stable for HPPA too.

  07 Jul 2007; Tom Gall <tgall@gentoo.org> Net-SSLeay-1.30.ebuild:
  stable on ppc64

  03 Jul 2007; Raúl Porcel <armin76@gentoo.org> Net-SSLeay-1.30.ebuild:
  alpha stable

  12 May 2007; Joshua Kinard <kumba@gentoo.org> Net-SSLeay-1.30.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Net-SSLeay-1.30.ebuild:
  ppc stable

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org> Net-SSLeay-1.30.ebuild:
  ia64 + x86 stable

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org> Manifest:
  sparc stable

  13 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Net-SSLeay-1.30.ebuild:
  Stable on sparc
