@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Net-SSLeay
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.57 2009/05/02 11:03:07 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.58 2009/11/27 10:31:55 tove Exp $
+
+  27 Nov 2009; Torsten Veller <tove@gentoo.org> Net-SSLeay-1.35.ebuild:
+  Fix LICENSE. Remove src_unpack
 
   02 May 2009; Torsten Veller <tove@gentoo.org> -Net-SSLeay-1.25.ebuild,
   -Net-SSLeay-1.30.ebuild:
